--- a/price_compare/look/templates/pages/index.html
+++ b/price_compare/look/templates/pages/index.html
@@ -1,10 +1,181 @@
-{% extends "../layouts/base.html" %}
-{% load static %}
-{% block content %}
-   <h1>Landing page</h1>
-   
-   
-{% endblock %}
-{% block styles %}
-    <link rel="stylesheet" href={% static "css/index.css" %}>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LOOK</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+    <nav>
+        <div>
+            <img src="img/logo.png" class="logo" alt="logo">
+        </div>
+        <div class="nav-links" id="nav-links">
+            <a href={% url "home" %}>Home</a>
+            <a href={% url "products" %}>Products</a>
+            <a href={% url "about" %}>About</a>
+            <a href={% url "contact" %}>Contact</a>
+            <a href={% url "docs" %}>Docs</a>
+        </div>
+        <div class="hamburger-menu">
+            <div class="ham-bar bar-top"></div>
+            <div class="ham-bar bar-mid"></div>
+            <div class="ham-bar bar-bottom"></div>
+        </div>
+    </nav>
+
+    <!-- Landing Intro Section -->
+    <section class="intro">
+        <h1>
+            GET THE RIGHT GADGET WITH YOUR BUDGET
+        </h1>
+        <p>Find the best deals on gadgets with our price comparison tool - save money, save time, and get the best gadget for your budget! .</p>
+
+        <a href="#"><button class="herobtn">Get Started</button></a> <a href="#"><button class="herobtn2">Learn
+                More</button></a>
+    </section>
+    <!-- Brands Section -->
+    <section class="brands">
+        <div class="brands-container">
+            <div class="brand-box text-box">
+                <h1>BREAKOUT
+                    BRANDS</h1>
+            </div>
+            <div class="brand-box">
+                <p>APPLE</p>
+                <img src="img/apple.png" alt="apple">
+            </div>
+            <div class="brand-box">
+                <p>SAMSUNG</p>
+                <img src="img/samsung.png" alt="samsung">
+            </div>
+        </div>
+
+        <div class="brands-container">
+            <div class="brand-box">
+                <p>GOOGLE</p>
+                <img src="img/google.png" alt="google">
+            </div>
+            <div class="brand-box">
+                <p>XIAOMI</p>
+                <img src="img/xiaomi.png" alt="xiaomi">
+            </div>
+            <div class="brand-box text-box2">
+                <h1>HOT RIGHT NOW</h1>
+            </div>
+        </div>
+
+        <div class="brands-container">
+            <div class="brand-box">
+                <p>SONY</p>
+                <img src="img/sony.png" alt="sony">
+            </div>
+            <div class="brand-box text-box3">
+                <h1>TRENDING NOW</h1>
+            </div>
+            <div class="brand-box">
+                <p>OPPO</p>
+                <img src="img/oppo.png" alt="oppo">
+            </div>
+        </div>
+    </section>
+
+    <!-- New Product Section -->
+    <section class="new-product">
+        <h2>NEW PRODUCTS</h2>
+        <div class="product-container">
+            <div class="product-box">
+                <img src="img/iphone13.png" alt="">
+                <h3>Iphone 13</h3>
+                <p>Voted the best phone of 2021, the iPhone 13 is still a game changer in the smart phone space...</p>
+            </div>
+            <div class="product-box">
+                <img src="img/apple airpods pro.png" alt="">
+                <h3>Apple Airpods Pro</h3>
+                <p>A good contender in the headphone space, not at the level of the high end headphones but a very...</p>
+            </div>
+            <div class="product-box">
+                <img src="img/sony mk.png" alt="">
+                <h3>Sony MK III</h3>
+                <p>Lorem ipsum dolor sit amet consectetur. Ultrices libero faucibus at orci in at risus fusce... </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Feature Section -->
+    <section class="feature">
+        <div class="feature-box">
+            <img src="img/check icon.png" alt="">
+            <h4>Easy-to-use price comparison tool</h4>
+            <p>Our price comparison tool makes it simple and easy to compare prices on a wide range of gadgets from multiple retailers.</p>
+        </div>
+
+        <div class="feature-box">
+            <img src="img/check icon.png" alt="">
+            <h4> Wide range of retailers and gadgets available</h4>
+            <p>Our website offers a vast selection of gadgets from top brands, so you can easily find the perfect one for your needs and budget.</p>
+        </div>
+
+        <div class="feature-box">
+            <img src="img/check icon.png" alt="">
+            <h4>Intuitive search function and user-friendly interface</h4>
+            <p>Our intuitive user-friendly interface make it a breeze to find the right gadget in no time .</p>
+        </div>
+    </section>
+
+    <!-- Signup Section -->
+    <section class="signup">
+        <div class="left">
+            <h2>Save money and find the best gadget deals </h2>
+            <p>Looking for the perfect gadget but don't want to overspend? Look no further than our website! Our easy-to-use price comparison tool allows you to quickly and easily compare prices on a wide range of gadgets, so you can find the best deal for your budget. <br /><br />
+
+Whether you're in the market for a new smartphone, laptop, or tablet, our tool makes it easy to compare prices from a variety of retailers. Don't settle for overpaying on your next gadget purchase - let our website help you find the best deal and save money on your next tech purchase!</p>
+        </div>
+        <div class="right">
+            <h1>
+                SIGNUP
+                FOR
+                SMARTER
+                SHOPPING</h1>
+            <a href="#"><button class="herobtn">Sign Up</button></a>
+        </div>
+    </section>
+    <!-- Get In Touch Section -->
+    <section class="getintouch">
+        <div class="box">
+            <h2>Get In Touch</h2>
+            <p>Looking to stay up-to-date on the latest gadget deals and trends? Subscribe to our newsletter today!
+As a subscriber, you'll receive regular updates on the best deals on gadgets, as well as tips and tricks for getting the most out of your tech.</p>
+        </div>
+        <div class="form">
+            <form action="#">
+                <input type="email" placeholder="Email Address" class="form-input" required><input type="text"
+                    placeholder="Full Name" class="form-input" required> <input type="submit" value="Subscribe"
+                    class="subscribe">
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="nav-links">
+            <a href={% url "home" %}>Home</a> <span>|</span>
+            <a href={% url "products" %}>Products </a><span>|</span>
+            <a href={% url "about" %}>About</a><span>|</span>
+            <a href={% url "contact" %}>Contact</a><span>|</span>
+            <a href={% url "docs" %}>Docs</a>
+        </div>
+        <p>15662 Magodo Estate, Zuri Street, ZA 94103, Nigeria
+            © 2022 - Our Company, All rights reserved.</p>
+    </footer>
+
+
+    <script src="index.js"></script>
+</body>
+
+</html>
