--- a/price_compare/look/templates/pages/index.html
+++ b/price_compare/look/templates/pages/index.html
@@ -19,11 +19,25 @@
             <a href={% url "about" %}>About</a>
             <a href="#contact">Contact</a>
             <a href={% url "docs" %}>Docs</a>
+         {% if user.is_authenticated %}
+            <a href={% url "logout" %}>Log Out</a>
+         {% else %}
+            <a href={% url 'login' %}>Log In</a>
+         {% endif %}
         </div>
         <div class="hamburger-menu">
             <div class="ham-bar bar-top"></div>
             <div class="ham-bar bar-mid"></div>
             <div class="ham-bar bar-bottom"></div>
+        </div>
+        <div class="navbar-user">
+        {% if user.is_authenticated %}
+           <p>
+                Hi {{ user.username }}!
+           </p> 
+        {% else %}
+            <p>You are not logged in</p>
+        {% endif %}
         </div>
     </nav>
 
@@ -34,8 +48,8 @@
         </h1>
         <p>Find the best deals on gadgets with our price comparison tool - save money, save time, and get the best gadget for your budget! .</p>
 
-        <a href="#"><button class="herobtn">Get Started</button></a> <a href="#"><button class="herobtn2">Learn
-                More</button></a>
+        <a href="#"><button class="herobtn">Get Started</button></a>
+         <a href="#"><button class="herobtn2">Learn More</button></a>
     </section>
     <!-- Brands Section -->
     <section class="brands">
@@ -71,7 +85,7 @@
         <div class="brands-container">
             <div class="brand-box">
                 <p>SONY</p>
-                <img src={% static "img/song.png" %} alt="sony">
+                <img src={% static "img/songOne.png" %} alt="sony1">
             </div>
             <div class="brand-box text-box3">
                 <h1>TRENDING NOW</h1>
@@ -88,17 +102,17 @@
         <h2>NEW PRODUCTS</h2>
         <div class="product-container">
             <div class="product-box">
-                <img src={% static "img/iphone13.png" %} alt="">
+                <img src={% static "img/iphone13.png" %} alt="iphone13">
                 <h3>Iphone 13</h3>
                 <p>Voted the best phone of 2021, the iPhone 13 is still a game changer in the smart phone space...</p>
             </div>
             <div class="product-box">
-                <img src={% static "img/apple airpods pro.png" %} alt="">
+                <img src={% static "img/apple airpods pro.png" %} alt="apple_airpods">
                 <h3>Apple Airpods Pro</h3>
                 <p>A good contender in the headphone space, not at the level of the high end headphones but a very...</p>
             </div>
             <div class="product-box">
-                <img src={% static "img/song mk.png" %} alt="">
+                <img src={% static "img/mk song.png" %} alt="song3">
                 <h3>Sony MK III</h3>
                 <p>Lorem ipsum dolor sit amet consectetur. Ultrices libero faucibus at orci in at risus fusce... </p>
             </div>
@@ -108,19 +122,19 @@
     <!-- Feature Section -->
     <section class="feature">
         <div class="feature-box">
-            <img src={% static "img/check icon.png" %} alt="">
+            <img src={% static "img/check icon.png" %} alt="check1">
             <h4>Easy-to-use price comparison tool</h4>
             <p>Our price comparison tool makes it simple and easy to compare prices on a wide range of gadgets from multiple retailers.</p>
         </div>
 
         <div class="feature-box">
-            <img src={% static "img/check icon.png" %} alt="">
+            <img src={% static "img/check icon.png" %} alt="check2">
             <h4> Wide range of retailers and gadgets available</h4>
             <p>Our website offers a vast selection of gadgets from top brands, so you can easily find the perfect one for your needs and budget.</p>
         </div>
 
         <div class="feature-box">
-            <img src={% static "img/check icon.png" %} alt="">
+            <img src={% static "img/check icon.png" %} alt="check3">
             <h4>Intuitive search function and user-friendly interface</h4>
             <p>Our intuitive user-friendly interface make it a breeze to find the right gadget in no time .</p>
         </div>
